--- a/cv.html
+++ b/cv.html
@@ -36,21 +36,24 @@
 
 <section class="cv-intro">
 
-    <svg id="cv-icon" width="144px" height="97px" viewBox="0 0 144 97" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-        <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-            <g id="Desktop-HD" transform="translate(-1058.000000, -396.000000)" fill-rule="nonzero">
-                <path d="M1090.5,490.5 L1169.5,490.5 L1169.5,404 C1169.5,400.410149 1166.58985,397.5 1163,397.5 L1097,397.5 C1093.41015,397.5 1090.5,400.410149 1090.5,404 L1090.5,490.5 Z" id="Rectangle-1" stroke="#c1ccdb" stroke-width="3"></path>
-                <path d="M1146.5,399.523233 L1146.5,413 C1146.5,416.589851 1149.41015,419.5 1153,419.5 L1167.27584,419.5 L1146.5,399.523233 Z" id="Rectangle-2" stroke="#c1ccdb" stroke-width="3"></path>
-                <path d="M1059.5,491 L1200.49023,491" id="Line-4" stroke="#c1ccdb" stroke-width="3" stroke-linecap="round"></path>
-                <circle id="cv-Oval-1" stroke="#c1ccdb" stroke-width="3" cx="1119" cy="418" r="7"></circle>
-                <path d="M1134,447 C1134,438.715729 1127.28427,432 1119,432 C1110.71573,432 1104,438.715729 1104,447" id="cv-Oval-2" stroke="#c1ccdb" stroke-width="3"></path>
-                <path d="M1102.63333,458 L1158.71797,458" id="Line-1" stroke="#c1ccdb" stroke-width="2" stroke-linecap="square"></path>
-                <path d="M1102.63333,468 L1158.71797,468" id="Line-2" stroke="#c1ccdb" stroke-width="2" stroke-linecap="square"></path>
-                <path d="M1135,478 L1158.73668,478" id="Line-3" stroke="#c1ccdb" stroke-width="2" stroke-linecap="square"></path>
+
+      <?xml version="1.0" encoding="UTF-8"?>
+        <svg width="265px" height="55px" viewBox="0 0 265 55" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+            <!-- Generator: Sketch 63.1 (92452) - https://sketch.com -->
+            <desc>Created with Sketch.</desc>
+            <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                <g id="resume-strokes" transform="translate(-127.000000, -161.000000)" fill-rule="nonzero" stroke-width="3">
+                    <path d="M155.715429,213.432 C157.587429,213.432 159.963429,212.4 162.843429,210.336 C164.955429,208.848 166.203429,207.528 166.587429,206.376 L166.587429,206.376 L157.515429,191.256 C159.627429,189.816 161.259429,187.884 162.411429,185.46 C163.563429,183.036 164.139429,180.336 164.139429,177.36 C164.139429,167.52 157.827429,162.6 145.203429,162.6 L145.203429,162.6 L131.451429,162.6 C129.675429,162.6 128.787429,163.44 128.787429,165.12 L128.787429,165.12 L128.787429,212.064 C128.787429,212.784 131.091429,213.144 135.699429,213.144 L136.064162,213.143159 C140.381006,213.122963 142.539429,212.739243 142.539429,211.992 L142.539429,211.992 L142.539429,195.648 L144.771429,195.648 L151.539429,211.416 C152.451429,212.76 153.843429,213.432 155.715429,213.432 Z M142.899429,186.144 L142.539429,186.144 L142.539429,175.344 L144.051429,175.344 C146.067429,175.344 147.519429,175.764 148.407429,176.604 C149.295429,177.444 149.739429,178.728 149.739429,180.456 C149.739429,184.248 147.459429,186.144 142.899429,186.144 L142.899429,186.144 Z" id="R" stroke="#FA1B6B"></path>
+                    <path d="M191.602286,213.72 C196.354286,213.72 200.242286,212.832 203.266286,211.056 C204.178286,210.624 204.634286,209.7 204.634286,208.284 C204.634286,206.868 204.058286,205.128 202.906286,203.064 C202.522286,202.344 202.306286,202.008 202.258286,202.056 C199.234286,203.592 196.042286,204.36 192.682286,204.36 C191.146286,204.36 189.982286,204.084 189.190286,203.532 C188.398286,202.98 188.002286,201.984 188.002286,200.544 L188.002286,200.544 L192.970286,200.544 C201.898286,200.544 206.362286,196.656 206.362286,188.88 C206.362286,185.376 205.054286,182.4 202.438286,179.952 C199.822286,177.504 196.114286,176.28 191.314286,176.28 C186.514286,176.28 182.542286,178.032 179.398286,181.536 C176.254286,185.04 174.682286,189.66 174.682286,195.396 C174.682286,201.132 176.314286,205.62 179.578286,208.86 C182.842286,212.1 186.850286,213.72 191.602286,213.72 Z M191.890286,192.696 L188.002286,192.696 L188.002286,190.464 C188.002286,189.408 188.326286,188.604 188.974286,188.052 C189.622286,187.5 190.402286,187.224 191.314286,187.224 C193.282286,187.224 194.266286,188.232 194.266286,190.248 C194.266286,191.88 193.474286,192.696 191.890286,192.696 L191.890286,192.696 Z" id="e" stroke="#AA00FA"></path>
+                    <path d="M228.209143,213.72 C233.345143,213.72 237.185143,212.532 239.729143,210.156 C242.273143,207.78 243.545143,204.672 243.545143,200.832 C243.545143,197.904 242.393143,195.528 240.089143,193.704 C238.985143,192.84 237.989143,192.168 237.101143,191.688 C236.213143,191.208 235.097143,190.668 233.753143,190.068 C232.409143,189.468 231.485143,188.964 230.981143,188.556 C230.477143,188.148 230.225143,187.656 230.225143,187.08 C230.225143,186.168 230.873143,185.712 232.169143,185.712 C234.569143,185.712 236.801143,186.288 238.865143,187.44 C239.249143,187.296 239.957143,186.36 240.989143,184.632 C242.021143,182.904 242.537143,181.512 242.537143,180.456 C242.537143,179.208 241.277143,178.2 238.757143,177.432 C236.237143,176.664 233.165143,176.28 229.541143,176.28 C225.917143,176.28 222.809143,177.216 220.217143,179.088 C217.625143,180.96 216.329143,183.672 216.329143,187.224 C216.329143,192.792 219.329143,196.8 225.329143,199.248 C227.825143,200.4 229.073143,201.336 229.073143,202.056 C229.073143,203.064 228.353143,203.568 226.913143,203.568 C224.657143,203.568 221.585143,202.392 217.697143,200.04 C217.025143,200.52 216.365143,201.504 215.717143,202.992 C215.069143,204.48 214.745143,205.896 214.745143,207.24 C214.745143,209.256 216.137143,210.84 218.921143,211.992 C221.705143,213.144 224.801143,213.72 228.209143,213.72 Z" id="s" stroke="#FA13DD"></path>
+                    <path d="M283.608,213.72 C285.24,213.72 286.536,212.664 287.496,210.552 C288.168,208.92 288.504,207.312 288.504,205.728 C288.504,202.608 287.688,201.048 286.056,201.048 L286.056,201.048 L284.184,201.048 L284.184,177.432 C284.184,176.952 282.144,176.712 278.064,176.712 C273.984,176.712 271.944,176.952 271.944,177.432 L271.944,177.432 L271.944,200.544 C270.504,201.552 269.208,202.056 268.056,202.056 C266.52,202.056 265.752,200.856 265.752,198.456 L265.752,198.456 L265.752,177.432 C265.752,176.904 263.688,176.64 259.56,176.64 C255.432,176.64 253.368,176.904 253.368,177.432 L253.368,177.432 L253.368,198.672 C253.368,204.048 254.472,207.9 256.68,210.228 C258.888,212.556 262.32,213.72 266.976,213.72 C270.336,213.72 273.48,212.424 276.408,209.832 L276.408,209.832 L276.48,209.76 C278.016,212.4 280.392,213.72 283.608,213.72 Z" id="u" stroke="#FFEF22"></path>
+                    <path d="M306.92765,213.287377 C310.793788,213.273675 312.726857,213.033882 312.726857,212.568 L312.726857,212.568 L312.726857,189.528 C314.070857,188.472 315.150857,187.944 315.966857,187.944 C317.550857,187.944 318.342857,189.144 318.342857,191.544 L318.342857,191.544 L318.342857,212.496 C318.342857,212.928 320.394857,213.144 324.498857,213.144 L324.85565,213.143564 C328.721788,213.133972 330.654857,212.966118 330.654857,212.64 L330.654857,212.64 L330.654857,189.528 C331.998857,188.472 333.102857,187.944 333.966857,187.944 C335.550857,187.944 336.342857,189.144 336.342857,191.544 L336.342857,191.544 L336.342857,212.496 C336.342857,212.928 338.394857,213.144 342.498857,213.144 L342.85565,213.143564 C346.721788,213.133972 348.654857,212.966118 348.654857,212.64 L348.654857,212.64 L348.654857,190.752 C348.654857,181.104 344.694857,176.28 336.774857,176.28 C333.126857,176.28 330.006857,177.408 327.414857,179.664 C325.206857,177.408 322.290857,176.28 318.666857,176.28 C315.042857,176.28 311.742857,177.6 308.766857,180.24 C308.430857,179.424 307.458857,178.56 305.850857,177.648 C304.242857,176.736 302.574857,176.28 300.846857,176.28 C299.118857,176.28 297.870857,177.336 297.102857,179.448 C296.526857,180.984 296.238857,182.496 296.238857,183.984 C296.238857,187.296 297.030857,188.952 298.614857,188.952 L298.614857,188.952 L300.414857,188.952 L300.414857,212.496 C300.414857,213.024 302.466857,213.288 306.570857,213.288 L306.92765,213.287377 Z" id="m" stroke="#FB1E76"></path>
+                    <path d="M375.469714,213.72 C380.221714,213.72 384.109714,212.832 387.133714,211.056 C388.045714,210.624 388.501714,209.7 388.501714,208.284 C388.501714,206.868 387.925714,205.128 386.773714,203.064 C386.389714,202.344 386.173714,202.008 386.125714,202.056 C383.101714,203.592 379.909714,204.36 376.549714,204.36 C375.013714,204.36 373.849714,204.084 373.057714,203.532 C372.265714,202.98 371.869714,201.984 371.869714,200.544 L371.869714,200.544 L376.837714,200.544 C385.765714,200.544 390.229714,196.656 390.229714,188.88 C390.229714,185.376 388.921714,182.4 386.305714,179.952 C383.689714,177.504 379.981714,176.28 375.181714,176.28 C370.381714,176.28 366.409714,178.032 363.265714,181.536 C360.121714,185.04 358.549714,189.66 358.549714,195.396 C358.549714,201.132 360.181714,205.62 363.445714,208.86 C366.709714,212.1 370.717714,213.72 375.469714,213.72 Z M375.757714,192.696 L371.869714,192.696 L371.869714,190.464 C371.869714,189.408 372.193714,188.604 372.841714,188.052 C373.489714,187.5 374.269714,187.224 375.181714,187.224 C377.149714,187.224 378.133714,188.232 378.133714,190.248 C378.133714,191.88 377.341714,192.696 375.757714,192.696 L375.757714,192.696 Z" id="e-2" stroke="#B300FB"></path>
+                </g>
             </g>
-        </g>
-    </svg>
-    <h2 id="wc-text_1">Curriculum Vitae</h2>
+        </svg>
+
+    <!-- <h2 id="wc-text_1">Curriculum Vitae</h2> -->
     <h5><small>NHUT H. DON</small></h5>
 
 
@@ -87,45 +90,38 @@
   <div class="blocks">
 
     <div class="block">
-      <h4>The Essentials</h4>
+      <h4>The Essential</h4>
       <ul>
-        <li><p>Good knowledge of Design principles</p></li>
-        <li><p>Have great user empathy</p></li>
-        <li><p>Experience with user-centred design</p></li>
-        <li><p>Understandings of usability and user research/testing</p></li>
-        <li><p>Experience working on full product life cycle (concept/ideation stage to final product)</p></li>
-        <li><p>Experience working on interdisciplinary projects</p></li>
-        <li><p>Experience working with cross-functional teams & various stakeholders</p></li>
-        <li><p>Team-leading & mentoring experience</p></li>
-        <li><p>Work well independently and/or in a team </p></li>
-        <li><p>Highly familiar with international working environments</p></li>
-        <li><p>Strong problem-solving abilities & resilience</p></li>
-        <li><p>Quick adaptability & high flexibility</p></li>
-        <li><p>Eagerness to learn and willingness to get out of comfort zone</p></li>
+        <li><p>Design principles were a big part of my major.</p></li>
+        <li><p>I strive to approach UX/UI problems under a user's eye.</p></li>
+        <li><p>I put away the so-called 'designer ego' when designing for users.</p></li>
+        <li><p>I must get to know my users first prior to creating any design.</p></li>
+        <li><p>I love the whole process of creating a product (from sketchy sketches to fancy prototypes).</p></li>
+        <li><p>I have, and would be happy to work on interdisciplinary projects that go beyond my current expertise.</p></li>
+        <li><p>I am interested in finding a solution rather than winning an argument.</p></li>
+        <li><p>I am obsessed with solving problems and won't rest until I find a solution.</p></li>
+        <li><p>I am aware that there can never be "too much of knowledge"; hence, I am always&nbsp;learning.</p></li>
       </ul>
     </div>
 
     <div class="block">
       <h4>The Technical</h4>
       <ul>
-        <li><p>Proficient in Sketch, InVision, InVision Studio, Zeplin, Marvel</p></li>
-        <li><p>and relevant Software: Adobe Photoshop/Illustrator</p></li>
-        <li><p>Abilities to use other Multimedia Software (i.e. Audition, InDesign, Premiere, 3Ds Max)</p></li>
-        <li><p>Strong foundation to quickly pick up new tools</p></li>
-        <li><p>Knowledge of HTML5/CSS3/JS and some libraries (learning since 10-2018)</p></li>
-        <li><p>Experience designing for multiple platforms (responsive websites, mobile apps & other devices)</p></li>
-        <li><p>Familiar with Confluence & Jira</p></li>
-        <li><p>Multimedia background (knowledge of visual/interaction design, photography, animations,
-               video & sound editing, etc.)</p></li>
+        <li><p>My current tools of use are Sketch, InVision Studio, InVision, Zeplin,</p></li>
+        <li><p>and Adobe Photoshop/Illustrator as a complement.</p></li>
+        <li><p>I believe I have a strong enough foundation to pick up any new tools if necessary.</p></li>
+        <li><p>I can build basic websites from HTML/CSS/JS (constructed my Portfolio Site from scratch).</p></li>
+        <li><p>I have experience working with responsive websites and native apps.</p></li>
+        <li><p>I am familiar with Confluence & Jira.</p></li>
+        <li><p>I have a multimedia background that could come in handy in certain projects.</p></li>
       </ul>
     </div>
 
     <div class="block" id="languages">
-      <h4>The Languages</h4>
+      <h4>Languages</h4>
       <ul>
         <li><p>English - Full Professional</p></li>
         <li><p>Spanish - Limited Working (learning B2)</p></li>
-        <li><p>German - Elementary (learning A1)</p></li>
       </ul>
     </div>
 
@@ -155,11 +151,11 @@
       <div class="time-mark"></div>
       <div class="achievemnents">
         <div>
-          <h6>UX/UI Intern</h6>
-          <p><small><a href="https://s60.co" target="_blank">Studio60</a> | Saigon, VN</small></p>
+          <h6>Design Intern</h6>
+          <p><small>Studio60 | Saigon, VN</small></p>
           <ul>
             <li>Optimised/prepared images & assets for web/app&nbsp;development</li>
-            <li>Assisted in visual-related tasks</li>
+            <li>Assisted in UX/UI-related tasks</li>
             <li>Designed company's Intranet</li>
           </ul>
         </div>
@@ -172,17 +168,17 @@
       <div class="achievemnents">
         <div>
           <h6>UX/UI Designer <br /> (Junior - Senior - Local&nbsp;Teamlead)</h6>
-          <p><small><a href="https://s60.co" target="_blank">Studio60</a> | Saigon, VN</small></p>
+          <p><small>Studio60 | Saigon, VN</small></p>
           <ul>
             <li>Produced wireframes, mockups, prototypes for Web/App&nbsp;Products</li>
             <li>Promoted UX/UI&nbsp;solutions</li>
             <li>Created UI specs, styleguides, assets for product&nbsp;development</li>
             <li>Gathered insights from user research team & stakeholders to create/amend designs&nbsp;accordingly</li>
             <li>Designed interfaces for unpopular devices (e.g. petroleum refill app, apps for POS&nbsp;devices)</li>
-            <li>Liaised & collaborated with international stakeholders &&nbsp;teams</li>
+            <li>Liaised & collaborated with international stakeholders &&nbsp;teams for best outcomes</li>
             <li>Led local design team & mentored&nbsp;interns</li>
             <li>Delegated & managed team members' tasks to meet project&nbsp;deadlines</li>
-            <li>Occasional onsite work in Sydney for client meetings, trainings, and collaborations</li>
+            <li>Onsite work in Sydney for client meetings, trainings, and collaborations</li>
             <li>Created visual-related materials (e.g. pitch decks, banners,&nbsp;promotions)</li>
             <li>Designed company's new office (floor plan, 3D design,&nbsp;interior)</li>
           </ul>
@@ -197,7 +193,7 @@
         <div>
           <h6>Freelancer</h6>
           <ul>
-            <li>Working on self's&nbsp;projects</li>
+            <li>Working on side&nbsp;projects</li>
             <li>Learning Frontend Web Development (HTML/CSS/JS)</li>
             <li>Freelancing as a UX/UI&nbsp;designer</li>
           </ul>
@@ -220,7 +216,7 @@
       <p>
         <a href="mailto:nhuthoangdon@gmail.com">nhuthoangdon@gmail.com</a>
       </p>
-
+      <br />
       <h5>Mobile</h5>
       <p>
         +84-93-401-3398
@@ -232,7 +228,13 @@
       <p>
         <a href="https://nhuthoangdon.github.io">nhuthoangdon.github.io</a>
       </p>
+      <br />
+      <h5>Current Location / Timezone</h5>
+      <p>
+        Saigon, Vietnam / GMT+7
+      </p>
     </div>
+
   </div>
 </section>
 
