--- a/scheckerIntro.html
+++ b/scheckerIntro.html
@@ -93,52 +93,71 @@
 </section>
 
 
-<section id="schecker-explain">
-  <div class="wrapper big-col no-margin-top">
-    <h4>Why and How it works</h4>
-    <div class="block no-margin-top">
+
+<section class="hiw-section" id="schecker-hiw-section">
+
+  <h3>How it works</h3>
+
+  <div class="wrapper how-it-works" id="hiw-1">
+    <div class="hiw-feature-heading justify-end">
+      <h5 class="right-aligned">Get the Assessment</h5>
+    </div>
+
+    <div class="hiw-feature-ic" id="ic_check">
+      <img alt="" src="./Assets/disease-symbol.svg" />
+    </div>
+
+    <div class="hiw-feature-desc">
       <p>
-        <strong>Why: </strong>a study found that 65% out of 2,000 polled people in the US googled their symptoms
-        <span><small><i>(<a href="https://www.letsgetchecked.com">LetsGetChecked</a>'s survey stated in
-        <a href="https://bit.ly/2Cg9RyF">phillyvoice's article</a>)</i></small></span>. And that is only a small fraction of
-        the population in the US alone. The number must be much higher in developing countries where the healthcare systems are
-        not yet so advanced and prescription drugs not properly regulated.
-        Self-diagnosis is definitely not encouraged, that is why people should and deserve to better
-        understand of their health issues.
-
-        <br /><br />
-
-        <strong>How: </strong>Symptom checker is not a new concept with many webs/apps currently available in the market. However,
-        their accuracy is questionable <span><small><i>(<a href="https://bit.ly/38AYL3n">sciencealert</a>)</i></small></span>.
-        Most of those symptom checkers work like a search engine that pairs the inputted symptom(s) with their matching
-        conditions while failing to 'think' as a doctor. Schecker's algorithm assesses the symptoms the way a physician would.
-        Its database contains all information of the conditions, the symptoms they cause, together with all surrounding
-        factors that could lead to such symptoms. The AI analyses the user's inputs and info
-        (medical history, gender, age, diets, etc.) to asks relevant/rational corresponding questions and seek the link(s)
-        between those and matching conditions to filter out results.
+        Schecker's algorithm assesses the symptoms with the same approach as a physician.
+        The AI requests and analyses the user's inputs and info (medical history, gender, age, diets, etc.) to seek the link(s)
+        between those and matching conditions.
       </p>
     </div>
   </div>
-</section>
 
-<div class="leading-line" id="schecker-leading-line_1"></div>
+  <div class="short-leading-line" id="short-line_1"></div>
 
+  <div class="wrapper how-it-works" id="hiw-2">
 
-<section id="schecker-hiw-section">
-
-  <h3>In short, it</h3>
-
-  <div class="wrapper" id="schecker-features">
-    <div class="ic_schecker-feature" id="ic_check">
-      <img alt="" src="./Assets/disease-symbol.svg" />
+    <div class="hiw-feature-desc">
+      <p>
+        Book and manage appointments effortlessly. Results from the assessment and patient's info will be sent to doctors
+        prior to the appointments for a quicker diagnosis process.
+      </p>
     </div>
-    <div class="ic_schecker-feature" id="ic_book">
+
+    <div class="hiw-feature-ic" id="ic_book">
       <img alt="" src="./Assets/stethoscope.svg" />
     </div>
-    <div class="ic_schecker-feature" id="ic_manage">
-      <img alt="" src="./Assets/medical-chart.svg" />
+
+    <div class="hiw-feature-heading justify-start">
+      <h5 class="left-aligned">Book Appointments with Chosen Physicians</h5>
     </div>
   </div>
+
+  <div class="short-leading-line" id="short-line_2"></div>
+
+  <div class="wrapper how-it-works" id="hiw-3">
+
+    <div class="hiw-feature-heading justify-end">
+      <h5 class="right-aligned">Track and Manage Symptoms / Medication</h5>
+    </div>
+
+    <div class="hiw-feature-ic" id="ic_track">
+      <img alt="" src="./Assets/medical-chart.svg" />
+    </div>
+
+    <div class="hiw-feature-desc">
+      <p>
+        Keep track of the diseases, symptoms and their medication with custom reminders to never miss a dose.
+      </p>
+    </div>
+
+
+  </div>
+
+
 </section>
 
 <div class="leading-line" id="schecker-leading-line_2"></div>
@@ -164,11 +183,6 @@
     <img alt="user flow" id="schecker-userFlow" src="./Assets/schecker-userflow.png" />
   </div>
 
-
-  <div class="wrapper big-col" id="s_ui">
-    <h5 >UI Components</h5>
-    <img alt="UI Components" class="noShadow-img block-in" src="./Assets/schecker-uiComponents.png" />
-  </div>
 
   <div class="leading-line" id="s_leading-line-5"></div>
 </section>
