--- a/cv.html
+++ b/cv.html
@@ -179,7 +179,7 @@
             <li>Led local design team & mentored&nbsp;interns</li>
             <li>Delegated & managed team members' tasks to meet project&nbsp;deadlines</li>
             <li>Onsite work in Sydney for client meetings, trainings, and collaborations</li>
-            <li>Created visual-related materials (e.g. pitch decks, banners,&nbsp;promotions)</li>
+            <li>Created visual-related materials (e.g. pitch decks, banners,&nbsp;posters)</li>
             <li>Designed company's new office (floor plan, 3D design,&nbsp;interior)</li>
           </ul>
         </div>
