--- a/rr.html
+++ b/rr.html
@@ -120,14 +120,14 @@
     <div class="block no-margin-top block-in">
       <p>
         Customer Profile was constructed under similar layout to the Online Rental Application for UI consistencies,
-        and to minimise development efforts. Customer Profile also contained all rental/order/application information and details
+        and to minimise development efforts. Customer Profile also contained complex rental/order/application information and details
         which could be very content-heavy. Therefore, we organised relevant details in expandable panels and implemented paging for
         data loading efficiency.
       </p>
     </div>
-    <h5 class="block-in"><small>from Wireframes</small></h5>
+    <h5 class="block-in"><small>Hi-fi Wireframes</small></h5>
     <img class="noShadow-img block-in" alt="Application Process" src="./Assets/rr-profile-wire.png" />
-    <h5 class="block-in"><small>to Prototypes</small></h5>
+    <h5 class="block-in"><small>Click-thru Prototypes</small></h5>
     <img class="noShadow-img block-in" alt="Application Process" src="./Assets/rr-profile-mock.png" />
   </div>
 
