worked on About me footer problem (not solved but compromised)

--- a/about.html
+++ b/about.html
@@ -4347,7 +4347,7 @@
 
 
 
-<footer>
+<footer id="footer_about-me">
   <small class="copyright">	&#169; 2019 NHUT H. DON</small>
   <div class="footer-links">
     <a href="./index.html">Home</a>
