polished up again

--- a/bardot.html
+++ b/bardot.html
@@ -72,9 +72,9 @@
     <div class="block block-in">
       <h2>Bardot</h2>
       <p>
-        Being one of the most iconic Australia's high fashion brands, Bardot's website had a lot to take into consideration.
-        The old website was outdated with clunky header and ineffectively organised contents.
-        Our job was to optimise and deliver a refreshed eCommerce website as part of their re-platform process.
+        As a big eCommerce website, the project had a lot to take into consideration.
+        Our job was to optimise the whole site's UX/UI issues and deliver a refreshed one
+        as part of their re-platform process.
       </p>
     </div>
       <div class="block block-in">
@@ -90,14 +90,10 @@
 </section>
 
 <section class="challenge block-in" id="bardot-challenge">
-  <h3>THE CHALLENGE</h3>
+  <h3>CHALLENGES</h3>
     <div class="block">
       <p>
-        As a delicate eCommerce website,
-        the project required many micro interactions, functionalities and heavy mobile optimisation.
-        We had to keep in mind all aspects during the design process, with the most challenging part being keeping the
-        design elements (principles, product functionalities, client's requirements, etc.)
-        aligned with the project milestones and budget.
+        Many micro interactions, out-of-scope functionalities, heavy mobile optimisation.
       </p>
     </div>
 </section>
@@ -107,7 +103,6 @@
     <div class="block small-block block-in">
       <h4>SEARCH</h4>
       <p>
-        'Search' function is one important part of an eCommerce website.
         The old search bar was visually unappealing and hard to find.
         We re-designed it with trending items as a pre-suggestion since we wanted to take any opportunities to introduce these.
         Psychologically speaking, we believed pre-suggestions would serve as 'hints'
@@ -230,23 +225,12 @@
 </section>
 
 
-<section class="challenge" id="bardot-learnings">
-  <h3 class="block-in">Project Conclusion</h3>
-    <div class="block block-in">
-      <p>
-        The project involved many stakeholders. There were quite an amount of change requests and out-of-scope features.
-        Therefore, the communication had to be smooth, otherwise, the outcomes could be disastrous.
-        Having been through similar projects facing the same problems, we had created a uniform communication process
-        in which we made sure everyone was on track of even a slight change. Lots of compromise was also made between different
-        teams and stakeholders.
-      </p>
-    </div>
-</section>
 
 
 
 
 <section class="other-works">
+  <h2>Other Works</h2>
   <div class="work-tiles">
 
     <div class="work-tile block-in" >
@@ -267,7 +251,7 @@
 
   </div>
 
-  <a class="all-works-link block-in" href="./works.html"><h5>More Works</h5></a>
+  <a class="all-works-link block-in" href="./works.html"><h5>More</h5></a>
 </section>
 
 
