--- a/rr.html
+++ b/rr.html
@@ -137,21 +137,11 @@
 
 
 
-<section class="challenge light-bg-f9f9f9">
-  <h3 class="block-in">Project Conclusion</h3>
-    <div class="block block-in">
-      <p>
-        Processing complex forms and profile contents required lots of collaboration within our cross-functional team.
-        We had to work closely together to ensure not only the UX/UI was implemented correctly, but also all information and
-        details to be accurate.
-      </p>
-    </div>
-</section>
-
 
 
 
 <section class="other-works">
+  <h2>Other Works</h2>
   <div class="work-tiles">
 
     <div class="work-tile block-in" >
@@ -172,7 +162,7 @@
 
   </div>
 
-  <a class="all-works-link block-in" href="./works.html"><h5>More Works</h5></a>
+  <a class="all-works-link block-in" href="./works.html"><h5>More</h5></a>
 </section>
 
 
