--- a/sa.html
+++ b/sa.html
@@ -79,7 +79,7 @@
       <div class="block block-in">
         <p>
           <strong>Project type</strong> <br />
-          Website re-design. <br /><br />
+          Web Design. <br /><br />
           <strong>My Role</strong> <br />
           Visual design.
         </p>
@@ -89,12 +89,10 @@
 </section>
 
 <section class="challenge block-in" id="sa-challenge">
-  <h3 class="block-in">THE CHALLENGE</h3>
+  <h3 class="block-in">CHALLENGES</h3>
     <div class="block">
       <p>
-        As an informative NGO website, content display and hiarachy were very important.
-        The most challenging part was to optimise and scale mandatory contents so that they lie above the fold across multiple
-        screen/viewport sizes as per client's requirements.
+        Time & budget constraints, content displays/scale, multiple layouts.
       </p>
     </div>
 </section>
@@ -122,7 +120,7 @@
       <img alt="Category Styling" class="noShadow-img" src="./Assets/sa-categoryColours.png" />
     </div>
     <div class="block small-block block-in">
-      <h4>STANDARDS CATEGORY STYLING</h4>
+      <h4>CATEGORY STYLING</h4>
       <p>
         We assigned each Standards Category a monochromatic set of coloured blocks for visual and filtering purposes.
       </p>
@@ -148,18 +146,18 @@
     <div class="block small-block block-in">
       <h4>SEARCH RESULTS</h4>
       <p>
-        Results displayed in visually distinguished Categories and were sortable/filterable.
+        Clear and simple display with intuitive filter and sort options.
       </p>
     </div>
   </div>
 
   <div class="wrapper big-col light-bg-f9f9f9">
-    <h4 class="block-in">MAIN INFO PAGES</h4>
+    <h4 class="block-in">MANDATORY PAGES</h4>
     <div class="block no-margin-top block-in">
       <p>
-        The project required different layouts for most of the pages,
+        As an informative website, customised layouts were required for most of the pages,
         so we came up with a solution to breakdown contents into
-        modules/blocks instead of individual page design for flexibility, and for the sake of
+        modules/blocks to be reused whenever applicable, and for the sake of
         development time and effort.
       </p>
     </div>
@@ -196,29 +194,9 @@
 
 
 
-<section class="challenge" id="sa-learnings">
-  <h3 class="block-in">Project Conclusion</h3>
-    <div class="block block-in">
-      <p>
-        The project was under a budget and restricted timeframe. We had to go on full speed from rapid prototyping to detailed
-        interactive prototyping as per client's requests.
-        Despite the agreements upon each milestone, lots of alterations were made as we went from low-fi to hi-fi wireframes to
-        interactive prototype to live site. Flexibility is the key, after all.
-      </p>
-    </div>
-</section>
-
-
-
-
-
-
-
-
-
-
 
 <section class="other-works">
+  <h2>Other Works</h2>
   <div class="work-tiles">
 
     <div class="work-tile block-in" >
@@ -230,16 +208,16 @@
     </div>
 
     <div class="work-tile block-in">
-      <div id="tile_bardot"></div>
-      <a href="./bardot.html" class="tile-CTA">
-        <img alt="Bardot Logo" src="./Assets/logo_bardot.png" />
-        <p>A <i class="i-delicate">delicate</i> eCommerce Website</p>
+      <div id="tile_rr"></div>
+      <a href="./rr.html" class="tile-CTA">
+        <img alt="Bardot Logo" src="./Assets/logo_rr.png" />
+        <p>A complex process <i class="i-simplified">simplified</i></p>
       </a>
     </div>
 
   </div>
 
-  <a class="all-works-link block-in" href="./works.html"><h5>More Works</h5></a>
+  <a class="all-works-link block-in" href="./works.html"><h5>More</h5></a>
 
 </section>
 
