--- a/scheckerIntro.html
+++ b/scheckerIntro.html
@@ -96,11 +96,11 @@
 
 <section class="hiw-section" id="schecker-hiw-section">
 
-  <h3>How it works</h3>
+  <h3>Key Features</h3>
 
   <div class="wrapper how-it-works" id="hiw-1">
     <div class="hiw-feature-heading justify-end">
-      <h5 class="right-aligned">Get the Assessment</h5>
+      <h5 class="right-aligned">Symptom Assessment</h5>
     </div>
 
     <div class="hiw-feature-ic" id="ic_check">
@@ -109,9 +109,8 @@
 
     <div class="hiw-feature-desc">
       <p>
-        Schecker's algorithm assesses the symptoms with the same approach as a physician.
-        The AI requests and analyses the user's inputs and info (medical history, gender, age, diets, etc.) to seek the link(s)
-        between those and matching conditions.
+        Straightforward symptom input screen as home screen with options to either choose symptoms with keywords or from visualised
+        body parts.
       </p>
     </div>
   </div>
@@ -122,8 +121,7 @@
 
     <div class="hiw-feature-desc">
       <p>
-        Book and manage appointments effortlessly. Results from the assessment and patient's info will be sent to doctors
-        prior to the appointments for a quicker diagnosis process.
+        Easy booking process right from the listing screen. Appoinments listing, statuses are easily accessible.
       </p>
     </div>
 
@@ -132,7 +130,7 @@
     </div>
 
     <div class="hiw-feature-heading justify-start">
-      <h5 class="left-aligned">Book Appointments with Chosen Physicians</h5>
+      <h5 class="left-aligned">Appoinment Booking</h5>
     </div>
   </div>
 
@@ -141,7 +139,7 @@
   <div class="wrapper how-it-works" id="hiw-3">
 
     <div class="hiw-feature-heading justify-end">
-      <h5 class="right-aligned">Track and Manage Symptoms / Medication</h5>
+      <h5 class="right-aligned">Symptoms & Medication Management</h5>
     </div>
 
     <div class="hiw-feature-ic" id="ic_track">
@@ -150,10 +148,9 @@
 
     <div class="hiw-feature-desc">
       <p>
-        Keep track of the diseases, symptoms and their medication with custom reminders to never miss a dose.
+        Intuitive tracking & management screens to effectively keep track of symptoms and medication.
       </p>
     </div>
-
 
   </div>
 
@@ -222,6 +219,7 @@
 
 
 <section class="other-works">
+  <h2>Other Works</h2>
   <div class="work-tiles">
 
     <div class="work-tile block-in" >
@@ -242,7 +240,7 @@
 
   </div>
 
-    <a class="all-works-link block-in" href="./works.html"><h5>More Works</h5></a>
+    <a class="all-works-link block-in" href="./works.html"><h5>More</h5></a>
 </section>
 
 
