--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 <!-- Homepage Intro Section -->
 <section class="flex-row" id="home-intro">
 
-  <h1 id="intro_text">Howdy, <br /> welcome! </h1>
+  <h1 id="intro_text">Howdy</h1>
 
     <!-- CTA arrow for next page -->
     <a class="CTAarrow arrow-down" id="home-CTAarrow" href="#home-intro_2" rel="m_PageScroll2id">
@@ -129,12 +129,12 @@
 <section class="flex-column" id="home-intro_2">
     <h2 class="centered-text intro2-in-out">
         I do UX/UI, <br />
-        working hard to advance the career.
+        looking to work on some exciting stuff.
     </h2>
 
     <p class="centered-text intro2-in-out" style="font-weight:400; font-size: 1em !important; letter-spacing: .1em;">
       <i>
-        - I love ideas and believe in things that make sense -
+        - scroll below for samples of my past projects -
         </i>
     </p>
 </section>
@@ -149,12 +149,12 @@
      <!-- Project Description -->
       <div class="project-description" id="prj-des_schecker">
         <div class="prj-des-contents">
-          <h3 class="schecker-in-out">Experimental project - Schecker</h3>
+          <h3 class="schecker-in-out">Schecker - App</h3>
             <p class="schecker-in-out">
-              App conceptualisation & design - A Platform that uses AI to tackle health issues from the top down.
+              Conceptualisation & design - A Platform that uses AI to tackle health issues from the top&nbsp;down.
             </p>
           <!-- CTA -->
-            <a class="CTA-button schecker-in-out" id="schecker-CTA" target="_blank" href="./scheckerIntro.html">
+            <a class="CTA-button schecker-in-out" id="schecker-CTA" href="./scheckerIntro.html">
               <svg class="button-outline" width="188px" height="52px" viewBox="0 0 188 52">
                   <g stroke="none" stroke-width="2" fill="none" fill-rule="evenodd">
                       <g class="cta-btn-stroke" transform="translate(-780.000000, -669.000000)" fill-rule="nonzero" stroke="#0e83ea">
@@ -172,18 +172,20 @@
 
 
 <section class="project" id="prj-bardot">
+  <div class="full-prj-img" id="bardot-homepage"></div>
+
   <div class="hero-overlay" id="hero-overlay_bardot"></div>
 
     <a href="./bardot.html" class="hero-img"> </a>
      <!-- Project Description -->
       <div class="project-description"  id="prj-des_bardot">
         <div class="prj-des-contents" id="prj-des-contents_bardot">
-          <h3 class="bardot-in-out">Bardot</h3>
+          <h3 class="bardot-in-out">Bardot - Web</h3>
             <p class="bardot-in-out">
             UX/UI optimisation and website re-design for one of the most Australia's iconic fashion&nbsp;brands.
             </p>
           <!-- CTA -->
-            <a class="CTA-button bardot-in-out" id="bardot-CTA" target="_blank" href="./bardot.html">
+            <a class="CTA-button bardot-in-out" id="bardot-CTA" href="./bardot.html">
               <svg class="button-outline" width="188px" height="52px" viewBox="0 0 188 52">
                   <g stroke="none" stroke-width="2" fill="none" fill-rule="evenodd">
                       <g class="cta-btn-stroke" transform="translate(-780.000000, -669.000000)" fill-rule="nonzero" stroke="#0e83ea">
@@ -202,18 +204,20 @@
 
 
 <section class="project" id="prj-sa">
+  <div class="full-prj-img" id="sa-homepage"></div>
+
   <div class="hero-overlay" id="hero-overlay_sa"></div>
 
     <a href="./sa.html" class="hero-img"> </a>
      <!-- Project Description -->
       <div class="project-description"  id="prj-des_sa">
         <div class="prj-des-contents" id="prj-des-contents_sa">
-          <h3 class="sa-in-out">Standards Australia</h3>
+          <h3 class="sa-in-out">Standards Australia - Web</h3>
             <p class="sa-in-out">
               Visual website re-design for Australia's leading non-governmental, non-profit standards&nbsp;organisation.
             </p>
           <!-- CTA -->
-            <a class="CTA-button sa-in-out" id="sa-CTA" target="_blank" href="./sa.html">
+            <a class="CTA-button sa-in-out" id="sa-CTA" href="./sa.html">
               <svg class="button-outline" width="188px" height="52px" viewBox="0 0 188 52">
                   <g stroke="none" stroke-width="2" fill="none" fill-rule="evenodd">
                       <g class="cta-btn-stroke" transform="translate(-780.000000, -669.000000)" fill-rule="nonzero" stroke="#0e83ea">
