--- a/index.html
+++ b/index.html
@@ -129,12 +129,12 @@
 <section class="flex-column" id="home-intro_2">
     <h2 class="centered-text intro2-in-out">
         I do UX/UI, <br />
-        looking to work on some exciting stuff.
+        and some multimedia stuff too.
     </h2>
 
     <p class="centered-text intro2-in-out" style="font-weight:400; font-size: 1em !important; letter-spacing: .1em;">
       <i>
-        - scroll below for samples of my past projects -
+        ----- <img alt="scroll down" src="./Assets/thinArrow.svg" /> -----
         </i>
     </p>
 </section>
