--- a/scheckerIntro.html
+++ b/scheckerIntro.html
@@ -164,14 +164,14 @@
 
   <div class="wrapper big-col" id="s_concept-flow">
     <h5 id="s_concept-flow-h5">Simple Flow</h5>
-    <img id="s_concept-flow-img" alt="concept flow" class="block-in noShadow-img" src="./Assets/schecker-simplifiedFlow.png" />
+    <img id="s_concept-flow-img" alt="concept flow" class="noShadow-img" src="./Assets/schecker-simplifiedFlow.png" />
   </div>
 
 
 
   <div class="wrapper big-col" id="s_wireframe">
     <h5 id="s_wireframe-h5">Low-fi Wireframe</h5>
-    <img id="s_wireframe-img" alt="wireframe" class="block-in noShadow-img" src="./Assets/schecker-wireframe.png" />
+    <img id="s_wireframe-img" alt="wireframe" class="noShadow-img" src="./Assets/schecker-wireframe.png" />
   </div>
 
 
@@ -280,6 +280,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/plugins/RoundPropsPlugin.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/utils/Draggable.min.js"></script>
 <script type="text/javascript" src="./Scripts/projectScript.js"></script>
+<script src="./Scripts/Smooth-Mouse-Wheel-Scrolling-Plugin-With-jQuery-easeScroll/jquery.easeScroll.js"></script>
 
 </body>
 
