--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 <!-- Homepage Intro Section -->
 <section class="flex-row" id="home-intro">
 
-  <h1 id="intro_text">Howdy</h1>
+  <h1 id="intro_text">Hi there!</h1>
 
     <!-- CTA arrow for next page -->
     <a class="CTAarrow arrow-down" id="home-CTAarrow" href="#home-intro_2" rel="m_PageScroll2id">
@@ -129,7 +129,7 @@
 <section class="flex-column" id="home-intro_2">
     <h2 class="centered-text intro2-in-out">
         I do UX/UI, <br />
-        and some multimedia stuff too.
+        and some Multimedia things.
     </h2>
 
     <p class="centered-text intro2-in-out" style="font-weight:400; font-size: 1em !important; letter-spacing: .1em;">
@@ -151,7 +151,7 @@
         <div class="prj-des-contents">
           <h3 class="schecker-in-out">Schecker - App</h3>
             <p class="schecker-in-out">
-              Conceptualisation & design - A Platform that uses AI to tackle health issues from the top&nbsp;down.
+              Conceptualisation & Design - a startup idea of a platform that streamlines the healthcare process.
             </p>
           <!-- CTA -->
             <a class="CTA-button schecker-in-out" id="schecker-CTA" href="./scheckerIntro.html">
