--- a/sa.html
+++ b/sa.html
@@ -92,7 +92,7 @@
   <h3 class="block-in">CHALLENGES</h3>
     <div class="block">
       <p>
-        Time & budget constraints, content displays/scale, multiple layouts.
+        Time & budget constraints, content display/scale, design optimisation for CMS flexibility.
       </p>
     </div>
 </section>
@@ -100,12 +100,12 @@
 
 <section>
   <div class="wrapper big-col no-margin-top">
-    <h4 class="block-in">MULTI-TIER MENU</h4>
+    <h4 class="block-in">MENU/NAV Bar REVAMP</h4>
     <div class="block no-margin-top block-in">
       <p>
-        Menu had up to 3 levels, each must show a brief of info on hover.
-        We had to discuss a solution that would meet the UX/UI desires while not exceeding the estimated developing time and
-        efforts.
+        We redesigned the outdated generic menu with a multi-tier one to accommodate the heavy info on hover as per client's
+        requirements.
+        The Search Field was also emphasised to give users easier access to the Search Function.
       </p>
     </div>
     <img class="noShadow-img block-in" alt="Multi-level Menu" src="./Assets/sa-menu.png" />
