--- a/index.html
+++ b/index.html
@@ -334,9 +334,10 @@
 <script src="./Scripts/jquery.gsap.min.js"></script>
 <script src="./Scripts/gsap.min.js"></script>
 <script src="./Scripts/anime.min.js"></script>
-<script type="text/javascript" src="./Scripts/myScript.js"></script>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="./Scripts/jquery.malihu.PageScroll2id.min.js"></script>
+<script type="text/javascript" src="./Scripts/myScript.js"></script>
+
 
 
 
