Update blah blah

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 <!-- Homepage Intro Section -->
 <section class="flex-row" id="home-intro">
 
-  <h1 id="intro_text">Hi there!</h1>
+  <h1 id="intro_text">Hi, <br />Welcome!</h1>
 
     <!-- CTA arrow for next page -->
     <a class="CTAarrow arrow-down" id="home-CTAarrow" href="#home-intro_2" rel="m_PageScroll2id">
@@ -129,12 +129,12 @@
 <section class="flex-column" id="home-intro_2">
     <h2 class="centered-text intro2-in-out">
         I do UX/UI, <br />
-        and some Multimedia things.
+        love to work on some creative stuff.
     </h2>
 
     <p class="centered-text intro2-in-out" style="font-weight:400; font-size: 1em !important; letter-spacing: .1em;">
       <i>
-        ----- <img alt="scroll down" src="./Assets/thinArrow.svg" /> -----
+          <img alt="scroll down" src="./Assets/thinArrow.svg" />
         </i>
     </p>
 </section>
@@ -233,19 +233,19 @@
 
 
 <section class="flex-column" id="more-works">
-  <a href="./works.html" target="_blank"><h5>More Works</h5></a>
+  <h3>There're more</h3>
+  <a class="big-link" href="./works.html" target="_blank"><h5>View all</h5></a>
 </section>
 
 
 
 
 <section class="flex-column" id="contact-me">
-  <h1 style="text-align:center;" class="contact-in-out">Contact</h1>
+  <h1 style="text-align:center;" class="contact-in-out">Let's talk</h1>
   <p class="centered-text contact-in-out">
-    Social Media isn't my cup of coffee.<br />
-    If you'd like to find me, <br />
-    <a id="home-mailto" target="_blank"
-    href="mailto:nhuthoangdon@gmail.com?Subject=Got%20you%20an%20Offer&Body=Hey%20Nhut">drop me a line</a> and we shall see.
+    <!-- Shoot me a line.<br /> -->
+    <a class="big-link" id="home-mailto" target="_blank"
+    href="mailto:nhuthoangdon@gmail.com?Subject=Got%20you%20an%20Offer&Body=Hey%20Nhut"><h5>Drop me a line</h5></a>
   </p>
 
   <?xml version="1.0" encoding="UTF-8"?>
